fix legends and map buttons z-index

--- a/src/views/Main/styles.scss
+++ b/src/views/Main/styles.scss
@@ -128,11 +128,11 @@
     .tf-legend {
       min-width: unset;
       max-width: none;
-      max-height: 350px;
+      max-height: 22rem;
 
       .tf-legend__only-circles {
-        width: 300px;
-        height: 280px;
+        width: 18rem;
+        height: 17.5rem;
 
         .tf-legend__item {
           bottom: 50px;
